# todo-axum-leptos-mvc

./: Cargo.toml  README.md
server/: Cargo.toml
server/src/: app.rs  lib.rs
server/src/features/hello_world/: hello_world_controller.rs  mod.rs
src/: app.rs  lib.rs  main.rs  router.rs
src/features/hello_world/: hello_world_router.rs  hello_world_service.rs  hello_world_view.rs  mod.rs
src/routes/: hello_world_handler.rs  mirror_body_json_handler.rs  mirror_body_string_handler.rs  mod.rs
